test/arity_mismatch.ref
Error: File "arity_mismatch.cppo", line 3, characters 0-10
Error: "INCR" expects 1 argument but is applied to 2 arguments.
