test/arity_mismatch.cppo
(* This test shows an arity mismatch error. *)
#define INCR(x) x+1
INCR(x, y)
